--- a/24th.html
+++ b/24th.html
@@ -4,7 +4,7 @@
     <h1 align = "Center"><u><i><b>Welcome</u></i></b></h1>
 </head>
 <body>
-<p align = "Center"><font color = "red" size="7">I am Ahmad Hassaan</font><br/><s>i am currently &nbsp; free</s> due to my summer viccations &nbsp;&nbsp;&nbsp;&nbsp;and currently practicing some of the coding languages to master my coding skills</p>
+<p align = "Center"><font color = "red" size="7" face = "verdana">I am Ahmad Hassaan</font><br/><s>i am currently &nbsp; free</s> due to my summer viccations &nbsp;&nbsp;&nbsp;&nbsp;and currently practicing some of the coding languages to master my coding skills</p>
 <br><P align = "Center">24<sup>th</sup>August and N<sub>2</sub>SO<sub>4</sub></P>
 </body>
 </html>
